style: Icon in Navbar und Brand aktualisiert

--- a/src/pages/Navigation/LoggedInNavbar/navbar.css
+++ b/src/pages/Navigation/LoggedInNavbar/navbar.css
@@ -5,6 +5,11 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+.icon {
+    margin-right: 5px;
+}
+
 .navbar-nav {
     margin-left: 20px;
     font-weight: bold;
