--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 300px;
+    height: 550px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
