style: Login Formular überarbeitet

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,36 +1,12 @@
-.form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-.eingabe-benutzername-form {
-    width: 300px;
-}
-
-.eingabe-passwort-form {
-    width: 300px;
-    margin-top: 30px; 
-}
-
-.eingabe-benutzername-form label,
-.eingabe-passwort-form label {
-  font-weight: bold;
-}
-
 .anmelden-btn {
     background-color: black;
     border: none;
 }
 
 .anmelden-btn:hover {
-    background-color: #00c27b;
+    background-color: blue;
 }
 
-.button-container {
-    margin-top: 30px; 
-  }
-
-  .hidden {
+.hidden {
     display: none;
-  }
+}
