Add: Fehlermeldung bei ungültigem Login anzeigen
Wenn ein Nutzer bspw. das falsche Passwort eingebt oder der falsche Benutzername.

--- a/src/pages/Navigation/LoggedInNavbar/navbar.css
+++ b/src/pages/Navigation/LoggedInNavbar/navbar.css
@@ -25,7 +25,7 @@
 }
 
 .logout-btn {
-    background-color: black;
+    background-color: black !important;
     padding: 10px 30px;
     border: none;
 }
