--- a/src/pages/NeuesBuch/NeuesBuch.css
+++ b/src/pages/NeuesBuch/NeuesBuch.css
@@ -3,7 +3,6 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
 }
 
 form label {
@@ -24,11 +23,11 @@ form > * {
     background-color: #00c27b;
 }
 
-.infos {
+.UeberschriftNeuanlegen {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
+    height: 100px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
