Revert "Merge branch 'main' into wip-token-roles-handling"
This reverts commit 14d23ffe3404928ae69cabfdc3075cca8a3ff028, reversing
changes made to d76e0b324d6702d1d1b517308b23e6289ed4b818.

--- a/src/pages/NeuesBuch/NeuesBuch.css
+++ b/src/pages/NeuesBuch/NeuesBuch.css
@@ -3,6 +3,7 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
 }
 
 form label {
@@ -23,11 +24,11 @@ form > * {
     background-color: #00c27b;
 }
 
-.UeberschriftNeuanlegen {
+.infos {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100px;
+    margin-top: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
