--- a/src/pages/Navigation/LoggedOutNavbar/navbar.css
+++ b/src/pages/Navigation/LoggedOutNavbar/navbar.css
@@ -6,19 +6,12 @@
     font-weight: bold;
 }
 
-.icon {
-    margin-right: 5px;
-}
-
 .navbar-nav {
-    margin-left: 20px;
     font-weight: bold;
     font-size: 16px;
 }
   
 .nav-link {
-    padding: 8px 15px;
-    margin-right: 30px;
     border: none;
     border-radius: 4px;
     color: black; 
@@ -27,10 +20,26 @@
 .login-btn {
     background-color: black !important;
     padding: 10px 30px;
+    width: 100px;
     border: none;
 }
 
 .login-btn:hover {
     background-color: blue !important;
 }
+
+@media (max-width: 768px) {
+    .login-btn {
+      width: 200px;
+      color: black;
+      padding: 0 !important; 
+      background-color: transparent !important; 
+      font-weight: bold;
+
+    }
+    .login-btn:hover {
+        background-color: transparent !important;
+        color: black;
+    }
+  }
  
