--- a/src/pages/BuchSuchen/BuchSuchen.css
+++ b/src/pages/BuchSuchen/BuchSuchen.css
@@ -1,7 +1,11 @@
+.buchsuchen-formular {
+    margin-top: 50px;
+}
+
+
 .buch-suchen-form {
     display: flex;
     margin-left: 30px;
-    margin-top: 50px;
 }
 
 .suchen-btn {
