change: css Anpassungen

--- a/src/pages/BuchSuchen/BuchSuchen.css
+++ b/src/pages/BuchSuchen/BuchSuchen.css
@@ -10,7 +10,6 @@
 .suchen-btn {
     background-color: black !important;
     border: none !important;
-    margin-left: 30px;
 }
 
 .suchen-btn:hover {
@@ -18,8 +17,8 @@
 }
 
 .table-container {
-    margin: 30px auto;
-    width: 95%; 
+    width: 80%; 
+    padding-top: 20px;
 }
 
 .info-modal .modal-content {
@@ -33,3 +32,21 @@
     margin: 100px auto; 
 }
 
+.buch-suchen-form input{
+    width: 400px;
+    margin-right: 20px;
+  }
+
+  @media (max-width: 400px) {
+    .buch-suchen-form {
+      flex-direction: column; 
+      margin-left: 10px;
+      margin-right: 30px;
+    }
+  
+    .buch-suchen-form input,
+    .buch-suchen-form button {
+      width: 350px;
+      margin-bottom: 10px; 
+    }
+  }
