Anpassungen Layout Login

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -28,3 +28,8 @@
 .benutzername-label {
     font-weight: bold;
 }
+
+.showPasswordBtn {
+    background-color: black !important;
+    border-radius: 4px !important;
+}
