Change: query.tests gelöscht

--- a/src/pages/BuchSuchen/BuchSuchen.css
+++ b/src/pages/BuchSuchen/BuchSuchen.css
@@ -13,7 +13,7 @@
 }
 
 .suchen-btn:hover {
-    background-color: #00c27b !important;
+    background-color: blue !important;
 }
 
 .table-container {
