--- a/src/pages/NeuesBuch/NeuesBuch.css
+++ b/src/pages/NeuesBuch/NeuesBuch.css
@@ -13,7 +13,7 @@ form label {
     background-color: blue;
 }
 
-.UeberschriftNeuanlegen {
+.TextAusgabeBuchAnlegen {
     display: flex;
     flex-direction: column;
     align-items: center;
